--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- Html file for social links page -->
+<!-- link the mdn-fav-icon and add it to the existing file -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
