--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Html file for social links page -->
 <!-- link the mdn-fav-icon and add it to the existing file -->
+<!-- Put a fav-icon in place of the photo or else use a random one -->
 
 <!DOCTYPE html>
 <html lang="en">
